--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "react-native": "0.64.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-native-pager-view": "5.4.6",
+    "expo-font": "~10.0.3",
+    "expo-app-loading": "~1.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
