--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-elements": "^3.4.2",
+    "react-native-navbar-color": "^1.0.3",
     "react-native-pager-view": "5.4.6",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-svg": "12.1.1",
+    "react-native-system-navigation-bar": "^1.0.2",
+    "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
