--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-native-pager-view": "5.4.6",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "12.1.1",
+    "react-native-swiper-flatlist": "^3.0.16",
     "react-native-system-navigation-bar": "^1.0.2",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1"
