--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "react-native-swiper-flatlist": "^3.0.16",
     "react-native-system-navigation-bar": "^1.0.2",
     "react-native-vector-icons": "^9.0.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
