--- a/package.json
+++ b/package.json
@@ -10,23 +10,24 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
-    "expo": "~43.0.0",
-    "expo-app-loading": "~1.2.1",
-    "expo-font": "~10.0.3",
-    "expo-status-bar": "~1.1.0",
-    "native-base": "^3.2.2",
+    "expo": "^44.0.0",
+    "expo-app-loading": "~1.3.0",
+    "expo-font": "~10.0.4",
+    "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-elements": "^3.4.2",
-    "react-native-navbar-color": "^1.0.3",
-    "react-native-pager-view": "5.4.6",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-pager-view": "5.4.9",
+    "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.8.0",
-    "react-native-snap-carousel": "^3.9.1",
+    "react-native-screens": "~3.10.1",
+    "react-native-snap-carousel": "^1.3.1",
     "react-native-svg": "12.1.1",
     "react-native-swiper-flatlist": "^3.0.16",
     "react-native-system-navigation-bar": "^1.0.2",
