--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-indicators": "^0.17.0",
     "react-native-pager-view": "5.4.9",
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "3.3.2",
