--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.5",
     "@react-native-async-storage/async-storage": "^1.15.17",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
@@ -25,10 +26,12 @@
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-indicators": "^0.17.0",
+    "react-native-ionicons": "^4.6.5",
     "react-native-pager-view": "5.4.9",
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-side-menu": "^1.1.3",
     "react-native-snap-carousel": "^1.3.1",
     "react-native-svg": "12.1.1",
     "react-native-swiper-flatlist": "^3.0.16",
