--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-svg": "12.1.1",
     "react-native-swiper-flatlist": "^3.0.16",
     "react-native-system-navigation-bar": "^1.0.2",
+    "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "react-navigation-header-buttons": "^9.0.1",
