--- a/package.json
+++ b/package.json
@@ -15,29 +15,30 @@
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
-    "expo": "^44.0.0",
+    "expo": "^1.0.0",
     "expo-app-loading": "~1.3.0",
     "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
+    "minimist": "^1.2.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-elements": "^3.4.2",
+    "react-native-exit-app": "^1.1.0",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-indicators": "^0.17.0",
     "react-native-ionicons": "^4.6.5",
-    "react-native-pager-view": "5.4.9",
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-side-menu": "^1.1.3",
     "react-native-snap-carousel": "^1.3.1",
-    "react-native-svg": "12.1.1",
+    "react-native-svg": "^12.3.0",
     "react-native-swiper-flatlist": "^3.0.16",
     "react-native-system-navigation-bar": "^1.0.2",
     "react-native-table-component": "^1.2.2",
-    "react-native-vector-icons": "^9.0.0",
+    "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
     "react-navigation-header-buttons": "^9.0.1",
     "react-redux": "^7.2.6",
