--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-ionicons": "^4.6.5",
     "react-native-pager-view": "5.4.9",
     "react-native-reanimated": "^2.0.0",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-side-menu": "^1.1.3",
