--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-gesture-handler": "~2.1.0",
     "react-native-indicators": "^0.17.0",
     "react-native-ionicons": "^4.6.5",
+    "react-native-network-info": "^5.2.1",
     "react-native-pager-view": "5.4.9",
     "react-native-reanimated": "^2.0.0",
     "react-native-responsive-screen": "^1.4.2",
