--- a/package.json
+++ b/package.json
@@ -11,36 +11,36 @@
     "postinstall": "rndebugger-open"
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.5",
-    "@react-native-async-storage/async-storage": "^1.15.17",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
-    "expo": "^44.0.0",
-    "expo-app-loading": "~1.3.0",
-    "expo-font": "~10.0.4",
-    "expo-status-bar": "~1.2.0",
+    "expo": "^47.0.0",
+    "expo-app-loading": "~2.1.1",
+    "expo-font": "~11.0.1",
+    "expo-status-bar": "~1.4.2",
     "immer": "^9.0.15",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-elements": "^3.4.2",
-    "react-native-gesture-handler": "~2.1.0",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-indicators": "^0.17.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-network-info": "^5.2.1",
-    "react-native-pager-view": "5.4.9",
-    "react-native-reanimated": "^2.0.0",
+    "react-native-pager-view": "6.0.1",
+    "react-native-reanimated": "~2.12.0",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-side-menu": "^1.1.3",
     "react-native-snap-carousel": "^1.3.1",
-    "react-native-svg": "12.1.1",
+    "react-native-svg": "13.4.0",
     "react-native-swiper-flatlist": "^3.0.16",
     "react-native-system-navigation-bar": "^1.0.2",
     "react-native-vector-icons": "^9.0.0",
-    "react-native-web": "0.17.1",
+    "react-native-web": "~0.18.9",
     "react-redux": "^7.2.6",
     "reactotron-redux-saga": "^4.2.3",
     "redux": "^4.1.2",
