--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
-    "expo": "^47.0.0",
-    "expo-app-loading": "~2.1.1",
+    "expo": "^47.0.13",
     "expo-font": "~11.0.1",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "minimist": "^1.2.7",
     "react": "18.1.0",
