--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.9.7",
     "expo": "^47.0.13",
     "expo-font": "~11.0.1",
+    "expo-navigation-bar": "~2.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "minimist": "^1.2.7",
@@ -24,6 +25,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-indicators": "^0.17.0",
+    "react-native-navigation-bar-color": "^2.0.2",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
