--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-indicators": "^0.17.0",
-    "react-native-navigation-bar-color": "^2.0.2",
+    "react-native-modalbox": "^2.0.2",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
