--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-gesture-handler": "~2.8.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-video": "^5.2.1",
     "react-redux": "^8.0.5",
     "reactotron-react-native": "^5.0.3",
     "reactotron-redux": "^3.1.3",
