--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "expo-navigation-bar": "~2.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
-    "minimist": "^1.2.7",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-app-intro-slider": "^4.0.4",
@@ -26,12 +25,12 @@
     "react-native-gesture-handler": "~2.8.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-video": "^5.2.1",
     "react-redux": "^8.0.5",
     "reactotron-react-native": "^5.0.3",
     "reactotron-redux": "^3.1.3",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "expo-av": "~13.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3"
