--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "expo": "^47.0.13",
+    "expo-av": "~13.0.3",
     "expo-font": "~11.0.1",
     "expo-navigation-bar": "~2.0.1",
     "expo-splash-screen": "~0.17.5",
@@ -21,7 +23,7 @@
     "react": "18.1.0",
     "react-native": "0.70.8",
     "react-native-app-intro-slider": "^4.0.4",
-    "react-native-elements": "^3.4.2",
+    "react-native-flex-layout": "^0.1.5",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-vector-icons": "^9.2.0",
@@ -29,8 +31,7 @@
     "reactotron-react-native": "^5.0.3",
     "reactotron-redux": "^3.1.3",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.2",
-    "expo-av": "~13.0.3"
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3"
